Fix #103410: name collisions between vertex groups and attributes

These name collisions should be avoided with customdata, all sorts of
issues can arise from those.
We already warned in the attributes (but not the vertex groups) list if
those were found.
Previously, creating a vertex group with the same name as an already
existing attribute would allow this (and give said warning).
Previously, creating an attribute with the same name as an already
existing vertex group would silently fail (as in: dont return a layer)
-- and then due to an oversight in 101d04f41f (which assumed a valid
layer would always be returned by `BKE_id_attribute_new` and would
access stuff in the NULL layer) would even crash.

Now name collisions between vertex groups and attributes are handled by
ensuring unique names correctly.
This is done by running `BLI_uniquename_cb` twice (onnce for attributes
and once for vertex groups) -- doing this in one callback is probably
not possible since we would run into recursive infinite loops between the
two (at least afaict).