source/blender/blenkernel/BKE_attribute.h
@@ -9,6 +9,8 @@
 
 #pragma once
 
+#include "DNA_ID.h"
+
 #include "BLI_sys_types.h"
 
 #include "BKE_customdata.h"
@@ -21,6 +23,10 @@ struct CustomData;
 struct CustomDataLayer;
 struct ID;
 struct ReportList;
+
+typedef struct AttrUniqueData {
+  ID *id;
+} AttrUniqueData;
 
 /** #Attribute.domain */
 typedef enum eAttrDomain {
@@ -117,6 +123,7 @@ void BKE_id_attributes_default_color_set(struct ID *id, const char *name);
 
 struct CustomDataLayer *BKE_id_attributes_color_find(const struct ID *id, const char *name);
 
+bool BKE_id_attribute_unique_name_check(void *arg, const char *name);
 bool BKE_id_attribute_calc_unique_name(struct ID *id, const char *name, char *outname);
 
 const char *BKE_uv_map_vert_select_name_get(const char *uv_map_name, char *buffer);
