source/blender/blenkernel/intern/deform.cc
@@ -29,6 +29,7 @@
 
 #include "BLT_translation.h"
 
+#include "BKE_attribute.hh"
 #include "BKE_customdata.h"
 #include "BKE_data_transfer.h"
 #include "BKE_deform.h" /* own include */
@@ -447,6 +448,9 @@ bool BKE_object_supports_vertex_groups(const Object *ob)
 const ListBase *BKE_id_defgroup_list_get(const ID *id)
 {
   switch (GS(id->name)) {
+    case ID_OB: {
+      return BKE_object_defgroup_list((const Object *)id);
+    }
     case ID_ME: {
       const Mesh *me = (const Mesh *)id;
       return &me->vertex_group_names;
@@ -681,9 +685,9 @@ int BKE_object_defgroup_flip_index(const Object *ob, int index, const bool use_d
   return (flip_index == -1 && use_default) ? index : flip_index;
 }
 
-static bool defgroup_find_name_dupe(const char *name, bDeformGroup *dg, Object *ob)
+static bool defgroup_find_name_dupe(const char *name, bDeformGroup *dg, ID *id)
 {
-  const ListBase *defbase = BKE_object_defgroup_list(ob);
+  const ListBase *defbase = BKE_id_defgroup_list_get(id);
   bDeformGroup *curdef;
 
   for (curdef = static_cast<bDeformGroup *>(defbase->first); curdef; curdef = curdef->next) {
@@ -697,21 +701,30 @@ static bool defgroup_find_name_dupe(const char *name, bDeformGroup *dg, Object *
   return false;
 }
 
-struct DeformGroupUniqueNameData {
-  Object *ob;
-  bDeformGroup *dg;
-};
-
-static bool defgroup_unique_check(void *arg, const char *name)
+bool BKE_defgroup_unique_name_check(void *arg, const char *name)
 {
   DeformGroupUniqueNameData *data = static_cast<DeformGroupUniqueNameData *>(arg);
-  return defgroup_find_name_dupe(name, data->dg, data->ob);
+  return defgroup_find_name_dupe(name, data->dg, data->id);
 }
 
 void BKE_object_defgroup_unique_name(bDeformGroup *dg, Object *ob)
 {
-  DeformGroupUniqueNameData data{ob, dg};
-  BLI_uniquename_cb(defgroup_unique_check, &data, DATA_("Group"), '.', dg->name, sizeof(dg->name));
+  /* Correct name name collisions with vertex groups. */
+  DeformGroupUniqueNameData data{&ob->id, dg};
+  BLI_uniquename_cb(
+      BKE_defgroup_unique_name_check, &data, DATA_("Group"), '.', dg->name, sizeof(dg->name));
+
+  /* Also correct name name collisions with (mesh) attributes. */
+  if (ob->type == OB_MESH) {
+    Mesh *me = static_cast<Mesh *>(ob->data);
+    AttrUniqueData data_attr{&me->id};
+    BLI_uniquename_cb(BKE_id_attribute_unique_name_check,
+                      &data_attr,
+                      DATA_("Group"),
+                      '.',
+                      dg->name,
+                      sizeof(dg->name));
+  }
 }
 
 float BKE_defvert_find_weight(const MDeformVert *dvert, const int defgroup)
